--- a/css/template.css
+++ b/css/template.css
@@ -47,19 +47,62 @@ article{
 }
 
 
+p1 {
+    color: white;
+    font-family: fantasy;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+}
 
-<style>
-#Auriculares1 {position:absolute; bottom:20px}
-#Auriculares1 {position:absolute; right:20%}
-</style>
+.container{
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
 
-<style>
-#Auriculares2 {position:absolute; bottom:20px}
-#Auriculares2 {position:absolute; right:45%}
-</style>
+.container .card{
+    width: 330px;
+    height: 430px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+}
+
+.container .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container .card img{
+    width: 330px;
+    height: 220px;
+}
 
 
-<style>
-#Auriculares3 {position:absolute; bottom:20px}
-#Auriculares3 {position:absolute; right:70%}
-</style>
+.container .card h4{
+    font-weight: 600;
+}
+
+.container .card p{
+    color: white;
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.container .card a {
+    font-weight: 500;
+    text-decoration: none;
+    color:red;
+}
+
+
