--- a/css/template.css
+++ b/css/template.css
@@ -7,7 +7,7 @@ header{
     text-align:center;
     padding:5px;
     font-size: 25;
-    background:white;
+    background:rgb(white);
    
 }
 
@@ -28,7 +28,7 @@ nav ul{
 nav ul li{
     display:inline-block;
     width:24%;
-    line-height:50px;
+    line-height:30px;
     list-style:none;
 }
 nav ul li a{
