--- a/css/productos.css
+++ b/css/productos.css
@@ -133,11 +133,27 @@ section div.absolute {
     width: 800px;
     height: 200px;
     border: 3px solid #000000;
-    
   }
   
 section div.absolute p{
     color: white;
     font-size: 28px;
     
+  }
+  body div.noticia {
+    width: 100%;
+    margin: 30px auto;
+      background-color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
+    padding: 15px;
+    font-size: 26px;
+  }
+  
+  body div.noticia img.izquierda {
+    float: left;
+    margin-right: 15px;
+  }
+  
+  body div.reset {
+    clear: both;
   }
