--- a/css/productos.css
+++ b/css/productos.css
@@ -14,7 +14,7 @@ header{
 nav{
     position:relative;
     margin:auto;
-    width:100%;
+    width:auto;
     height:auto;
     background:black;
 }
@@ -126,7 +126,6 @@ p1 {
     text-decoration: none;
     color:white;
 }
-
 section div.absolute {
     position: absolute;
     top: 50px;
@@ -144,15 +143,17 @@ section div.absolute p{
   body div.noticia {
     width: 100%;
     margin: 30px auto;
-      background-color: rgb(0, 0, 0);
-      color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 15px;
     font-size: 26px;
+    size: 40px;
   }
   
   body div.noticia img.izquierda {
     float: left;
     margin-right: 15px;
+    width: 600px;
   }
   
   body div.reset {
