agregado tarjetas de productos en compras

--- a/css/template.css
+++ b/css/template.css
@@ -151,7 +151,7 @@ p1 {
 	height: auto;
 	position: relative;
 	text-align: center;
-	width: auto%;
+	width: auto;
 }
 
 .webdesigntuts-workshop:before,
